Updates with the thing

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,2 +1,6 @@
+<%- include('components/header'); %>
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
+
+<%- include('components/footer'); %>
