--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center; }
+
+header {
+  border-bottom: 1px dashed #555;
+  padding: 20px; }
+
+footer {
+  border-top: 1px dashed #555;
+  padding: 20px; }
 
 a {
   color: #00B7FF; }
+
+/** PAGE SPECIFIC **/
+.index-wrapper {
+  padding: 20px; }
 
 /*# sourceMappingURL=style.css.map */
