--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+
+<%- include('components/header'); %>
+
+<div class="index-wrapper">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-  </body>
-</html>
+</div>
+
+<%- include('components/footer'); %>
