--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,5 +1,7 @@
 <footer>
-    &copy; 2019 Kingmaker LLC.
+    <div class="container">
+        Global Footer - &copy; 2020 Kingmaker LLC.
+    </div>
 </footer>
 
 <%- include('../tpl/foot'); %>
