--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,5 +1,7 @@
 <%- include('../tpl/head'); %>
 
 <header>
-    This is a global header.
+    <div class="container">
+        This is a global header.
+    </div>
 </header>
