--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,10 @@
 <%- include('components/header'); %>
 
 <div class="index-wrapper">
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container">
+        <h1><%= title %></h1>
+        <p>Welcome to <%= title %></p>
+    </div>
 </div>
 
 <%- include('components/footer'); %>
