--- a/views/tpl/head.ejs
+++ b/views/tpl/head.ejs
@@ -2,8 +2,6 @@
 <html>
   <head>
       <title><%= title %></title>
-      <script language="javascript" src="/bootstrap/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
-      <link rel='stylesheet' href='/stylesheets/style.css' />
+      <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
